--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,13 @@
             <version>3.8.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.8.1</version> <!-- Or the version you're using -->
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
